#+title:     Changelog
#+author:    Logan Barnett-Hoy
#+email:     logustus@gmail.com
#+date:      <2022-07-20 Wed>
#+language:  en
#+file_tags:
#+tags:

* changelog
** Upcoming
*** Breaking
*** Additions
*** Fixes
** v0.13.0
*** Breaking
*** Additions
1. Add ~Either~, a structure similar to ~Result~ but uses unbiased ~Left~ and
   ~Right~ branches - meaning there is no assumption that one branch must be an
   error.  It is not in total feature parity, but much of it is usable.
*** Fixes
** v0.12.0
*** Breaking
*** Additions
*** Fixes
1. Retroactively add some release notes.  Not comprehensive.
2. Correct typo in code comments.
** v0.11.0
*** Breaking
*** Additions
*** Fixes
1. Fix the build (hopefully).
2. Add a branch build test, so we know if tests are passing before we merge.
** v0.10.0
*** Breaking
*** Additions
1. Add ~Result#unwrap_or_else~ and ~Result#unwrap_err_or_else~ for providing
   safe yet dynamic unwraps of ~Result~.
*** Fixes
** v0.9.0
*** Breaking
*** Additions
1. Add ~Result#ok?~ and ~Result#err?~ to make a smooth ~rspec~ experience using
   its BDD style.
*** Fixes
** v0.8.0
*** Breaking
*** Additions
*** Fixes
1. Fix method reference in README.
** v0.7.0
*** Breaking
*** Additions
1. Add ~unwrap_or~ to ~Result~ for safely unwrapping ~Err~.
*** Fixes
** v0.6.0
*** Breaking
*** Additions
*** Fixes
** v0.5.0
*** Breaking
*** Additions
*** Fixes
** v0.4.0
*** Breaking
*** Additions
*** Fixes
** v0.3.0
*** Breaking
*** Additions
1. Add =Result#or_else=, the =Err= equivalent to =Result#and_then=.
*** Fixes
1. Fix the automated release process accounting for =Gemfile.lock=.
2. Fix subheadings for changelog on =Upcoming= not being populated on new
   versions.
** v0.2.0
None of these changes have any release impact.
*** Breaking
*** Additions
1. Flesh out rdoc on all code entities. 100% yard coverage!
2. Bash can get squirrelly Use all Ruby for more complex release scripting.
*** Fixes
1. Fix existing changelog.